// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar component when className is provided renders with extra className 1`] = `
Snapshot Diff:
- First value
+ Second value

  <img
    alt="Portrait of Fake Name"
-   className="avatar"
+   className="avatar mock-class"
    draggable="false"
    src="mock-src"
  />
`;

exports[`Avatar component when rendered renders a wrapping element containing an image 1`] = `
<img
  alt="Portrait of Fake Name"
  className="avatar"
  draggable="false"
  src="mock-src"
/>
`;
